<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".CalculatorFragment"
        android:padding="16dp"
        >


        <EditText
            android:id="@+id/expressionET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/input_style"
            android:hint="@string/enter_expression_hint"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <EditText
            android:id="@+id/expectedResult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/input_style"
            android:hint="@string/enter_expected_result"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expressionET"
            android:layout_marginTop="16dp"
            android:inputType="number"
            />

        <Button
            android:id="@+id/addBT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expectedResult"
            android:text="@string/addBt"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:padding="8dp"
            app:layout_constraintEnd_toStartOf="@id/minusBT"
            android:layout_margin="12dp"
            android:background="@drawable/bt_without_solid"
            app:backgroundTint="@null"
            android:textColor="@color/blue"
            />

        <Button
            android:id="@+id/minusBT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/subtractBt"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/addBT"
            app:layout_constraintTop_toTopOf="@+id/addBT"
            android:background="@drawable/bt_without_solid"
            app:backgroundTint="@null"
            android:textColor="@color/blue"/>

        <Button
            android:id="@+id/multiplyBT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/multiplyBt"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/addBT"
            app:layout_constraintStart_toStartOf="@+id/addBT"
            app:layout_constraintTop_toBottomOf="@+id/addBT"
            android:background="@drawable/bt_without_solid"
            app:backgroundTint="@null"
            android:textColor="@color/blue"/>

        <Button
            android:id="@+id/divideBT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bt_without_solid"
            android:padding="8dp"
            android:text="@string/divideBt"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="20sp"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="@+id/minusBT"
            app:layout_constraintStart_toStartOf="@+id/minusBT"
            app:layout_constraintTop_toTopOf="@+id/multiplyBT" />

        <Button
            android:id="@+id/calculateBT"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/calculateBt"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/multiplyBT"
            android:backgroundTint="@color/blue"
            />

        <TextView
            android:id="@+id/resultTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:textSize="24sp"
            android:layout_marginTop="8dp"
            android:background="@drawable/input_style"
            android:text="@string/result"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculateBT" />

        <ImageView
            android:id="@+id/descriptionImg"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultTV"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/q_mark"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

