<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    android:backgroundTint="@color/blue"
    android:layout_marginBottom="16dp"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    >

    <TextView
        android:id="@+id/expressionTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expression"
        android:textColor="@color/gray"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/user_answer_tv"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/expressionTV"
        app:layout_constraintTop_toBottomOf="@id/expressionTV" />

    <TextView
        android:id="@+id/userAnswerTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="0.0"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/userAnswer"
        app:layout_constraintStart_toEndOf="@+id/userAnswer"
        app:layout_constraintTop_toTopOf="@id/userAnswer"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/userAnswer"
        app:layout_constraintTop_toBottomOf="@+id/userAnswer" />

    <TextView
        android:id="@+id/resultTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="0.0"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/result"
        app:layout_constraintStart_toEndOf="@+id/result"
        app:layout_constraintTop_toTopOf="@id/result"
        />

    <ImageView
        android:id="@+id/cancelIV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/icon_cancel"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>